# runtime-homework-r351574nc3

./: .dockerignore  BUILD  Index.ipynb  guidelines.md  problem.md
Support Cases/: Index.ipynb
cmd/: BUILD.bazel  main.go
common/: BUILD.bazel  methods.go  types.go
events/: BUILD.bazel  methods.go  model.go  model_test.go  state.go  types.go
events/assign/: BUILD.bazel  assign.go  assign_test.go  methods.go  types.go
events/state/: BUILD.bazel  methods.go  state.go  types.go
events/store/: BUILD.bazel  methods.go  store.go  types.go
events/types/: BUILD.bazel  methods.go  types.go
