load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assign.go",
        "model.go",
        "state.go",
    ],
    importpath = "github.com/r351574nc3/runtime-homework-r351574nc3/events",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "assign_test.go",
        "model_test.go",
        "state_test.go",
    ],
    data = [
        "test_data/events.json"
    ],
    embed = [":go_default_library"],
)