load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assign/assign.go",
        "model.go",
        "state/state.go",
    ],
    importpath = "github.com/heroku/runtime-homework-r351574nc3/events",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "assign/assign_test.go",
        "model_test.go",
        "state/state_test.go",
    ],
    data = [
        "test_data/events.json"
    ],
    embed = [":go_default_library"],
)