load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "model.go",
    ],
    deps = [
        "//common:go_default_library",
        "//events/types:go_default_library",
        "//events/state:go_default_library",
        "//events/assign:go_default_library",
        "//events/store:go_default_library"
    ],
    importpath = "github.com/heroku/runtime-homework-r351574nc3/events",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "model_test.go",
    ],
    data = [
        "test_data/events.json"
    ],
    embed = [":go_default_library"],
)