load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assign.go",
    ],
    deps = [
        "//events/store:go_default_library",
        "//events/types:go_default_library"
    ],
    importpath = "github.com/heroku/runtime-homework-r351574nc3/events/assign",
    visibility = ["//visibility:public"],
)

