load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "store.go",
        "methods.go",
        "types.go"
    ],
    deps = [
        "//events/types:go_default_library"
    ],
    importpath = "github.com/heroku/runtime-homework-r351574nc3/events/store",
    visibility = ["//visibility:public"],
)

